syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.regexgame";
option objc_class_prefix = "HLW";

package regexgame;

message GameAction {
    oneof action {
        IncreaseNumber increase_number = 1;
        DecreaseNumber decrease_number = 2;
    }
}

message IncreaseNumber {
}

message DecreaseNumber {
}
