syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.regexgame";
option objc_class_prefix = "HLW";

package regexgame;

// Events that are happening in the game, that server sends to the clients.
message GameEvent {
  oneof event {
    GameStateUpdated game_state_updated = 1;
    CardAttacked card_attacked = 2;
  }
}

// Emitted on the call to GetEvents to pass full game state.
message GameStateUpdated {
  string json_encoded = 1;
}

// Emitted on every successful card attack.
message CardAttacked {
  int32 attacker_id = 1;
  int32 damage = 2;
  repeated int32 attacker_cards = 3;
  int32 attacked_card = 4;
}
